# jags-wfComboPack

./: .gitignore  README  README.md  configure.ac
src/: Makefile.am  wfComboPack.cc
src/functions/: Makefile.am  ResWagner.cc  ResWagner.h  TALLY.cc  TALLY.h  TALLYk.cc  TALLYk.h  TTB.cc  TTB.h  WADD.cc  WADD.h  generalAccumulator.cc  generalAccumulator.h  kReason.cc  kReason.h  randomWalk.cc  randomWalk.h
