noinst_LTLIBRARIES = wfComboPackfunc.la

wfComboPackfunc_la_CPPFLAGS = -I$(top_srcdir)/src -I$(includedir)/JAGS

wfComboPackfunc_la_LDFLAGS = -no-undefined -module -avoid -version

wfComboPackfunc_la_SOURCES = TTB.cc
wfComboPackfunc_la_SOURCES += TALLY.cc
wfComboPackfunc_la_SOURCES += TALLYk.cc
wfComboPackfunc_la_SOURCES += WADD.cc
wfComboPackfunc_la_SOURCES += randomWalk.cc
wfComboPackfunc_la_SOURCES += generalAccumulator.cc
wfComboPackfunc_la_SOURCES += kReason.cc

noinst_HEADERS = TTB.h
noinst_HEADERS += TALLY.h
noinst_HEADERS += TALLYk.h
noinst_HEADERS += WADD.h
noinst_HEADERS += randomWalk.h
noinst_HEADERS += generalAccumulator.h
noinst_HEADERS += kReason.h
